--- a/res/layout/weather_layout.xml
+++ b/res/layout/weather_layout.xml
@@ -7,6 +7,13 @@
         android:layout_width ="match_parent"
         android:layout_height="50dp"
         android:background="#484E61">
+    <Button
+            android:id="@+id/switch_city"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/home"/>
        <TextView 
            android:id="@+id/city_name"
            android:layout_width="wrap_content"
@@ -14,11 +21,21 @@
            android:layout_centerInParent="true"
            android:textColor="#fff"
            android:textSize="24sp"/>
+       
+        <Button
+            android:id="@+id/refresh_weather"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/refresh"/>
     </RelativeLayout>
     
      <RelativeLayout 
         android:layout_width ="match_parent"
         android:layout_height="0dp"
+        android:layout_weight="1"
         android:background="#27A5F9">
        <TextView 
            android:id="@+id/publish_text"
@@ -52,7 +69,7 @@
 			android:textColor="#FFF"
 			android:textSize="40sp" />
            
-			<LinearLayout
+	<LinearLayout
 			android:layout_width="wrap_content"
 			android:layout_height="60dp"
 			android:layout_gravity="center_horizontal"
@@ -64,7 +81,8 @@
 			android:layout_gravity="center_vertical"
 			android:textColor="#FFF"
 			android:textSize="40sp" />
-			<TextView
+			
+		 <TextView
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_gravity="center_vertical"
@@ -73,6 +91,7 @@
 			android:text="=="
 			android:textColor="#FFF"
 			android:textSize="40sp" />
+		 
 			<TextView
 			android:id="@+id/temp2"
 			android:layout_width="wrap_content"
@@ -80,6 +99,7 @@
 			android:layout_gravity="center_vertical"
 			android:textColor="#FFF"
 			android:textSize="40sp" />
+			
       </LinearLayout>
       </LinearLayout>
     </RelativeLayout>
